deploy/00-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: nightmare-project
  labels:
    name: nightmare-project
    environment: production
    project: mebn-task-manager
