deploy/01-namespace.yml
apiVersion: v1
kind: Namespace
metadata:
  name: task-board
  labels:
    name: task-board
    app: react-express-mongodb
