deploy/04-backend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: nightmare-project
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: python:3.9-alpine
        command: ["sh", "-c"]
        args:
        - |
          [...]
        ports:
        - containerPort: 5000
        volumeMounts:
        - name: database-storage
          mountPath: /data
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "500m"
      volumes:
      - name: database-storage
        emptyDir: {}
