deploy/webapp-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp
  namespace: webapp-demo
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec:
      containers:
      - name: webapp
        # Используем mongo-express - веб-интерфейс для MongoDB
        image: mongo-express:latest
        ports:
        - containerPort: 8081
        volumeMounts:
        - name: webapp-data
          mountPath: /tmp
      volumes:
      - name: webapp-data
        emptyDir: {}
