deploy/03-mongodb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sqlite-db
  namespace: nightmare-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: database
  template:
    metadata:
      labels:
        app: database
    spec:
      containers:
      - name: sqlite
        image: python:3.9-alpine  # Маленький образ
        command: ["sh", "-c"]
        args:
        - |
          [...]
        ports:
        - containerPort: 27017
        resources:
          requests:
            memory: "64Mi"
            cpu: "50m"
          limits:
            memory: "128Mi"
            cpu: "100m"
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: nightmare-project
spec:
  selector:
    app: database
  ports:
  - port: 27017
    targetPort: 27017
