deploy/05-backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: nightmare-project
spec:
  type: ClusterIP
  selector:
    app: backend
  ports:
  - port: 5000
    targetPort: 5000
