deploy/05-mongodb-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo
  namespace: task-board
  labels:
    app: mongodb
    component: database
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
    protocol: TCP
  type: ClusterIP
