deploy/05-traefik.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traefik
  namespace: nightmare-project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
      - name: traefik
        image: traefik:v3.0
        args:
          - --api.insecure=true
          - --providers.kubernetesingress
          - --entrypoints.web.address=:80
        ports:
        - name: web
          containerPort: 80
        - name: admin
          containerPort: 8080
        volumeMounts:
        - name: traefik-data
          mountPath: /tmp
      volumes:
      - name: traefik-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: nightmare-project
spec:
  selector:
    app: traefik
  ports:
    - name: web
      port: 80
      targetPort: 80
      nodePort: 30000
    - name: admin
      port: 8080
      targetPort: 8080
      nodePort: 30088
  type: NodePort
