deploy/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  namespace: webapp-demo
spec:
  selector:
    app: mongodb
  ports:
  - port: 27017
    targetPort: 27017
