deploy/webapp-service.yml
apiVersion: v1
kind: Service
metadata:
  name: webapp-service
  namespace: webapp-demo
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
  - port: 80
    targetPort: 8081
    nodePort: 30081
